force-app/main/default/objects/AAR_Teaching__c/AAR_Teaching__c.object-meta.xml
<CustomObject>
    <label>Teaching and Instruction</label>
    <nameField>
        <displayFormat>TCH-{0000}</displayFormat>
        <label>Teaching Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teaching and Instruction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>