force-app/main/default/objects/AAR_Teaching__c/fields/Course_Audience__c.field-meta.xml
<CustomField>
    <fullName>Course_Audience__c</fullName>
    <label>Course Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Undergraduate</fullName><default
        >false</default><label>Undergraduate</label></value>
            <value><fullName>Graduate</fullName><default>false</default><label
        >Graduate</label></value>
            <value><fullName>Postgraduate</fullName><default
        >false</default><label>Postgraduate</label></value>
            <value><fullName>Professional</fullName><default
        >false</default><label>Professional</label></value>
            <value><fullName>Mixed / Other</fullName><default
        >false</default><label>Mixed / Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>