force-app/main/default/objects/AAR_Teaching__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <label>Course Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>