force-app/main/default/objects/AAR_Teaching__c/fields/Hosting_Institution__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Institution__c</fullName>
    <label>Hosting Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>