force-app/main/default/objects/AAR_Teaching__c/fields/Instruction_Format__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Format__c</fullName>
    <label>Instruction Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Course</fullName><default>false</default><label
        >Course</label></value>
            <value><fullName>Workshop</fullName><default>false</default><label
        >Workshop</label></value>
            <value><fullName>Seminar</fullName><default>false</default><label
        >Seminar</label></value>
            <value><fullName>Grand Rounds</fullName><default
        >false</default><label>Grand Rounds</label></value>
            <value><fullName>Tutorial</fullName><default>false</default><label
        >Tutorial</label></value>
            <value><fullName>Online Module</fullName><default
        >false</default><label>Online Module</label></value>
            <value><fullName>Other</fullName><default>false</default><label
        >Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>